--- a/login/sing in.html
+++ b/login/sing in.html
@@ -23,7 +23,7 @@
                 <label for="Age">Gmail</label>
                 <input type="text" id="gmail" name="gmail" placeholder=" Enter Gmail">
                 <label for="distance">Password</label>
-                <input type="text" id="password" name="password" placeholder=" password">
+                <input type="password" id="password" name="password" placeholder=" password">
 
                 <label>
                     <input type="checkbox" name="option1" value="option1">Remember me</label><br>
