--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -12,16 +12,32 @@
 <body>
     <div class="nav">
         <div class="left">
-            <img style="width: 40px;" src="../IMG/Logo2.png" >
+            <img style="width: 40px;" src="../IMG/Logo2.png">
             <input type="text" placeholder="search">
             <i class='bx bx-search'></i>
         </div>
         <div class="right">
-            <i class='bx bx-home' style='color:#fffcfc' ></i>
+            <i class='bx bx-home' style='color:#fffcfc'></i>
             <i class='bx bx-bell' style='color:#fffcfc'></i>
             <i class='bx bx-chat' style='color:#fffcfc'></i>
-            <img style="width: 40px;"src="../IMG/Untitled.png" >
+            <img style="width: 40px;" src="../IMG/Untitled.png">
         </div>
+    </div>
+    <div class="info">
+        <div>
+            <img src="../IMG/Untitled.png">
+        </div>
+        <div class="detail">
+            <h1>Somchai_UP</h1><br>
+            <p>Garder: Male, age 20</p>
+            <p>Interested sports: football, badminton.</p><br>
+            <p>2 friends</p>
+        </div>
+    </div>
+    <div class="nav_post">
+        <a href="">Activity room</a>
+        <div class="line"></div>
+        <a href="">Past activity room</a>
     </div>
 </body>
 
