--- a/login/sing in.html
+++ b/login/sing in.html
@@ -20,13 +20,12 @@
             <h2>Sing in</h2>
             <form action="#">
 
-                <label for="Age">Gmail</label>
-                <input type="text" id="gmail" name="gmail" placeholder=" Enter Gmail">
+                <label for="Age">Email</label>
+                <input type="email" id="email" name="email" placeholder=" Enter email">
                 <label for="distance">Password</label>
                 <input type="password" id="password" name="password" placeholder=" password">
+                <div class="tot"><input type="checkbox" name="option1" value="option1"><label>Remember me</label><br></div>
 
-                <label>
-                    <input type="checkbox" name="option1" value="option1">Remember me</label><br>
                 <div class="qe">
                     <button type="submit">Sing in</button>
                 </div>
