--- a/Static/member/sing in.html
+++ b/Static/member/sing in.html
@@ -23,7 +23,7 @@
                 <input type="email" id="email" name="email" placeholder=" Enter email">
                 <label for="distance">Password</label>
                 <input type="password" id="password" name="password" placeholder=" password">
-                <div class="tot"><input type="checkbox" name="option1" value="option1"><label>Remember me</label><br></div>
+                <!-- <div class="tot"><input type="checkbox" name="option1" value="option1"><label>Remember me</label><br></div> -->
 
                 <div class="qe">
                     <button type="submit">Sing in</button>
