--- a/Static/member/sing up1.html
+++ b/Static/member/sing up1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="sing up1.css">
+    <link rel="stylesheet" href="../css/sing up1.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
         <div class="right">
             <h2>Sign up</h2>
-            <form action="sing up2.html">
+            <form action="/sing-up2">
                 <label for="email">Email</label>
                 <input fype="email" id="email" placeholder="Enter Email">
                 <label for="username">User name</label>
