--- a/Static/member/sing up2.html
+++ b/Static/member/sing up2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sing up</title>
-    <link rel="stylesheet" href="sing up2.css">
+    <link rel="stylesheet" href="../css/sing up2.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <div class="right">
             <h2>Sing up</h2>
 
-            <form action="#">
+            <form action="/login">
                 <label>Gender</label><br>
                 <div class="box" id="yy">
                     <label>
