--- a/Static/member/welcome.html
+++ b/Static/member/welcome.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>welcome</title>
-    <link rel="stylesheet" href="welcome.css">
+    <link rel="stylesheet" href="../css/welcome.css">
 </head>
 
 <body>
@@ -24,8 +24,8 @@
                     <p>FIND NEW <br> EXERCIS <br> FINEDNS NOW</p>
 
                     <div class="lot">
-                        <button onclick="location.href='../login/sing up1.html'" type="button">Sing up</button>
-                        <button onclick="location.href='../login/sing in.html'" type="button button2">Sing in</button>
+                        <button onclick="location.href='sing up1.html'" type="button">Sing up</button>
+                        <button onclick="location.href='sing in.html'" type="button button2">Sing in</button>
                     </div>
                 </div>
             </div>
